# TransformerEngine

./: .gitignore  MANIFEST.in
benchmarks/: BENCHMARK_PLAN.md  __init__.py  benchmark_grouped_fp8_current_scaling.py  benchmark_grouped_fp8_quantize.py  benchmark_grouped_fp8_tensor_scaling.py
benchmarks/common/: __init__.py  database_backend.py  distributed_utils.py  profiler_hooks.py  reporter.py  result_types.py  timing.py
benchmarks/config/: __init__.py  benchmark_config.py  sizes.py
benchmarks/cpp/: CMakeLists.txt  bench_common.h
benchmarks/cpp/operator/: CMakeLists.txt  bench_activation.cu  bench_cast.cu  bench_fused_attn.cu  bench_fused_rope.cu  bench_fused_router.cu  bench_gemm.cu  bench_hadamard.cu  bench_multi_tensor.cu  bench_normalization.cu  bench_softmax.cu  bench_swizzle.cu  bench_transpose.cu
benchmarks/fp8/: benchmark_grouped_fp8_quantize.py
benchmarks/grouped_quantize/: benchmark_grouped_fp8_quantize.py
benchmarks/jax/: __init__.py  bench_attention.py  bench_dense.py  bench_layernorm.py  bench_layernorm_mlp.py  bench_quantization.py  bench_transformer_layer.py  conftest.py
benchmarks/pytorch/: __init__.py  bench_attention.py  bench_grouped_linear.py  bench_layernorm.py  bench_layernorm_linear.py  bench_layernorm_mlp.py  bench_linear.py  bench_multi_head_attention.py  bench_optimizers.py  bench_quantization.py  bench_rmsnorm.py  bench_transformer_layer.py  conftest.py
benchmarks/scripts/: run_all.sh  run_cpp.sh  run_jax.sh  run_pytorch.sh  upload_results.py
benchmarks/swizzle/: benchmark_swizzle.py
docs/api/: pytorch.rst
(+105 files in other folders)
